--- a/templates/base.html
+++ b/templates/base.html
@@ -40,15 +40,8 @@
                 <ul class="nav">
                     <li><a href="#"><i class="bi bi-gear"></i>
                         <p>Settings</p></a></li>
-                    <li><a href="{% url 'guidelines' %}"><i class="bi-card-list"></i>
-                        <p>Guidelines</p></a></li>
-                    <li><a href="{% url 'calculate_complexity_line_by_line' %}"><i class="fa-brands fa-java"></i>
-                        <p>Java WCC Calculator</p></a></li>
-                    <li><a href="{% url 'calculate_complexity_line_by_line_csharp' %}"><i
-                            class="fa-brands fa-microsoft"></i>
-                        <p>C# WCC Calculator</p></a></li>
-                    <li><a href="{% url 'calculate_complexity-excel' %}"><i class="bi bi-graph-up"></i>
-                        <p>Statical Analysis</p></a></li>
+                    <li><a href="#"><i class="bi-card-list"></i>
+                        <p>Home</p></a></li>
                     <li><a href="http://127.0.0.1:8000/api/logout"><i class="bi bi-box-arrow-right"></i>
                         <p>Logout</p></a></li>
                 </ul>
