--- a/templates/complexityC_table.html
+++ b/templates/complexityC_table.html
@@ -3,6 +3,34 @@
 
 {% block title %}Code Complexity Results for C#{% endblock %}
 
+{% block sidebar %}
+    <div class="sidebar" data-color="black">
+        <div class="sidebar-wrapper">
+            <div class="logo">
+                <a href="http://127.0.0.1:8000" class="simple-text logo-mini">
+                    <img src="{% static 'images/code-harbor-logo.png' %}" alt="Code Harbor Logo" width="30">
+                </a>
+                <a href="http://127.0.0.1:8000" class="simple-text logo-normal">Code Harbor</a>
+            </div>
+            <ul class="nav">
+                <li><a href="#"><i class="bi bi-gear"></i>
+                    <p>Settings</p></a></li>
+                <li><a href="{% url 'guidelines' %}"><i class="bi-card-list"></i>
+                    <p>Guidelines</p></a></li>
+                <li><a href="{% url 'calculate_complexity_line_by_line' %}"><i class="fa-brands fa-java"></i>
+                    <p>Java WCC Calculator</p></a></li>
+                <li><a href="{% url 'calculate_complexity_line_by_line_csharp' %}"><i
+                        class="fa-brands fa-microsoft"></i>
+                    <p>C# WCC Calculator</p></a></li>
+                <li><a href="{% url 'calculate_complexity-excel' %}"><i class="bi bi-graph-up"></i>
+                    <p>Statical Analysis</p></a></li>
+                <li><a href="http://127.0.0.1:8000/api/logout"><i class="bi bi-box-arrow-right"></i>
+                    <p>Logout</p></a></li>
+            </ul>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
     <style>
         body {
@@ -477,7 +505,7 @@
                                 {% if cbo.recommendations %}
                                     <ul>
                                         {% for rec in cbo.recommendations %}
-                                            <li>{{ rec }}</li>
+                                            <li style="{% if cbo.prediction == 'High CBO (Issue)' %}color: red;{% else %}color: green;{% endif %}">{{ rec }}</li>
                                         {% endfor %}
                                     </ul>
                                 {% else %}
